package com.example.attitudemonitoring.bean


data class SensorData(
    val time: String,
    val value: Int
)
